test/errors/err2.upl
fn
	println("Say hello!")
end

fn main()
	sayHello()
end
